# aarchvm

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  README.en.md  README.md  README.zh.md  TODO.md
.devcontainer/: devcontainer.json
doc/: README.en.md  README.zh.md  armv8a-program-visible-audit.md  perf-baseline-vs-optimized.md
doc/blog/: 01-from-minimal-core-to-linux-smoke.md  02-mmu-tlb-and-the-point-where-toy-models-stop-working.md  03-u-boot-linux-dtb-and-boot-chain-alignment.md  04-from-bare-metal-tests-to-linux-user-space-regression.md  05-predecode-fastpath-and-what-the-hotspots-really-said.md  06-framebuffer-keyboard-and-the-first-usable-gui-loop.md  07-why-armv8a-closure-turns-into-exception-and-mmu-audit.md  08-how-i-designed-the-armv8a-closure-workflow.md  09-what-repeated-armv8a-closure-taught-me.md
dts/: aarchvm-current.dts  aarchvm-linux-min.dts  aarchvm-linux-smp.dts
include/aarchvm/: block_mmio.hpp  bus.hpp  bus_fast_path.hpp  cpu.hpp  device.hpp  external_device_proxy.hpp  framebuffer_dirty_tracker.hpp  framebuffer_sdl.hpp  generic_timer.hpp  gicv3.hpp  perf_mailbox.hpp  perf_types.hpp  pl050_kmi.hpp  plugin_child_runtime.hpp  plugin_config.hpp  plugin_protocol.hpp  ram.hpp  rtc_pl031.hpp  slirp_net_backend.hpp  snapshot_io.hpp  soc.hpp  system_registers.hpp  uart_pl011.hpp  virtio_blk_mmio.hpp  virtio_net_mmio.hpp
sdk/: CMakeLists.txt  README.md
sdk/cmake/: AarchvmPlugin.cmake
sdk/examples/register_bank/: CMakeLists.txt  register_bank.c
sdk/include/aarchvm-plugin-sdk/: plugin_api.h
sdk/tests/abi_smoke/: CMakeLists.txt  bad_abi.c  bad_manifest.c  no_entry.c
sdk/tests/runtime_reset/: CMakeLists.txt  reset_observable.c
src/: block_mmio.cpp  bus.cpp  bus_fast_path.cpp  cpu.cpp  external_device_proxy.cpp  framebuffer_sdl.cpp  generic_timer.cpp  gicv3.cpp  main.cpp  perf_mailbox.cpp  pl050_kmi.cpp  plugin_child_runtime.cpp  plugin_config.cpp  plugin_protocol.cpp  ram.cpp  rtc_pl031.cpp  slirp_net_backend.cpp  soc.cpp  system_registers.cpp  uart_pl011.cpp  virtio_blk_mmio.cpp  virtio_net_mmio.cpp
tests/: unit_cpu_cache_consistency.cpp  unit_external_plugin.cpp  unit_slirp_backend.cpp
tests/arm64/: adc_sbc_minimal.S  addsub_shift_more.S  allint_pm_sysreg_absent.S  amu_sysreg_absent.S  at_pan2_absent_undef.S  at_s1e0_el0_undef.S  atomic_alignment_fault.S  atomics_minimal.S  atomics_small.S  atomics_sp_base.S  bf16_absent_undef.S  bitfield_basic.S  branch_arith.S  branch_reg.S  brk_exception.S  build_tests.sh  casp_pair.S  cntkctl_el0_timer_access.S  cntkctl_el1.S  cntkctl_el1_visible_bits.S  contextidr_el1_res0_bits.S  cpacr_fp16_absent_misc_undef.S  cpacr_fp16_absent_more_undef2.S  cpacr_fp_absent_more_undef.S  cpacr_fp_absent_undef.S  cpacr_fp_literal_trap.S  cpacr_fp_mem_trap.S  cpacr_fp_pair_trap.S  cpacr_fp_structured_regpost_trap.S  cpacr_fp_structured_trap.S  cpacr_fp_sysreg_trap.S  cpacr_fp_trap.S  cpacr_fp_trap_regs.S  cpacr_visible_bits.S  crc32_family.S  csselr_el1_res0_bits.S  data_alignment_fault.S  dc_csw_privilege.S  dc_cva_persist_absent.S  dc_zva.S  (+337 more)
tests/linux/: bench_runner.c  build_debian_rootfs_image.sh  build_debian_systemd_initramfs.sh  build_linux_shell_snapshot.sh  build_linux_smp_shell_snapshot.sh  build_usertests_rootfs.sh  console_mux.c  fb_mark.c  fpint_selftest.c  fpsimd_init.c  fpsimd_selftest.S  fpsimd_selftest.c  functional_init.c  mprotect_exec_stress.c  poll_pipe_tty_affine.c  poll_tty_affine.c  poll_tty_smoke.c  pthread_sync_stress.c  read_tty_spin_affine.c  rtc_smoke.c  run_algorithm_perf.sh  run_block_mount_smoke.sh  run_busybox_smoke.sh  run_coldboot_interactive.sh  run_debian_systemd_boot.sh  run_functional_suite.sh  run_functional_suite_smp.sh  run_gui_tty1.sh  run_gui_tty1_from_snapshot.sh  run_interactive.sh  run_qemu_user_diff.sh  time_rate_smoke.c
